<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center"
                android:padding="8dp"
                tools:ignore="MissingConstraints">

            <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/back"
                    android:layout_marginEnd="8dp"/>

            <!-- Add appropriate constraints to position this LinearLayout -->
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:text="@string/username"/>

                <!-- Add space between TextView and Chip -->
                <Space
                        android:layout_width="8dp"
                        android:layout_height="match_parent"/>

                <com.google.android.material.chip.Chip
                        android:id="@+id/chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/red"
                        android:text="9+"
                        android:textColor="@color/white"
                        app:chipBackgroundColor="@color/red"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/baseline_account_balance_24"
                        android:layout_marginStart="8dp"/>

                <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/baseline_account_balance_24"
                        android:layout_marginStart="8dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"
        >
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:background="@drawable/cover"
                    >
                <ImageView
                        android:id="@+id/profile_picture"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:background="@drawable/circle_mask"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="16dp"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/profile"
                        android:layout_marginBottom="20dp"/>

            </RelativeLayout>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:padding="8dp"
                    android:textSize="24dp"
                    android:textStyle="bold"
            />
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

            >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3.2k"
                        android:textSize="20dp"
                        android:paddingLeft="8dp"
                        android:textStyle="bold"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="friends"
                        android:paddingLeft="8dp"
                        android:textColor="@color/gray"
                        android:textSize="20dp"
                />
            </LinearLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Love travelling"
                    android:paddingLeft="8dp"
                    android:textColor="@color/gray"
                    android:textSize="20dp"
            />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_height="wrap_content">

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cornerRadius="4dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/add_to_story"
                        app:backgroundTint="@color/blue"
                />

                <Button android:layout_width="171dp"
                        android:layout_height="wrap_content"
                        app:cornerRadius="4dp"
                        android:text="@string/edit_profile"
                        android:textColor="@color/black"
                        app:backgroundTint="@color/gray"
                        app:iconTint="@color/black"
                        app:icon="@drawable/baseline_architecture_24"
                />
                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cornerRadius="4dp"
                        android:layout_marginStart="8dp"
                        app:backgroundTint="@color/gray"
                        android:gravity="center"
                        app:iconGravity="end"
                        app:iconTint="@color/black"
                        app:icon="@drawable/baseline_apps_24"
                />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:paddingStart="8dp"
                    android:orientation="horizontal">
                <ImageButton
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@color/white"
                        android:src="@drawable/bank"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/student"
                        android:gravity="center"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:text="@string/at_royal_university_of_phonm_penh"
                        android:gravity="center"
                />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:orientation="horizontal">
                <ImageButton
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@color/white"
                        android:src="@drawable/baseline_apps_24"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Single"
                        android:gravity="center"
                />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:orientation="horizontal">
                <ImageButton
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@color/white"
                        android:src="@drawable/baseline_adjust_24"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="See your about info"
                        android:gravity="center"
                />
            </LinearLayout>
            <Button
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:cornerRadius="4dp"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:text="Edit public details"
            />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
